<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"

    tools:context=".RegistrationForm">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:gravity="center_horizontal"
        >


        <TextView
            android:id="@+id/view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_form"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="37dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="10dp"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="80dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/fullname" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="150dp"
            android:layout_marginBottom="5dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="220dp"
            android:layout_marginBottom="5dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="290dp"
            android:layout_marginBottom="5dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="360dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:text="@string/form_tc"
            android:textColor="#808080"
            android:textSize="15sp"
            app:buttonTint="#878787"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="438dp" />

        <Button
            android:id="@+id/createAccBtn"
            android:layout_width="250dp"
            android:layout_height="53dp"
            android:text="@string/create_new_account"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="499dp"
            tools:ignore="MissingConstraints"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>